saving work to this point

--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -15,9 +15,16 @@
 </head>
 
 <body>
+  <header>
+    <h1 style="display: inline;">My First Blog</h1>
+    <button id="back" style="float: right;">Back</button>
+    <button id="toggle">Toggle Light/Dark Mode</button>
+  </header>
 
   <!-- TODO: Create header, main, and footer elements -->
-
+  <main id="blog-posts">
+    <!-- Blog posts will be dynamically inserted here -->
+  </main>
 </body>
 
 </html>
