--- a/Develop/index.html
+++ b/Develop/index.html
@@ -13,15 +13,43 @@
     <script defer src="./assets/js/form.js" type="text/javascript"></script>
   </head>
 <body>
-  <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
+  <header>
+
+    <button id="toggle">Toggle Light/Dark Mode</button>
+  </header>
+
+  <main>
+   <aside>
+     <h2>My First Blog</h2>
+   </aside >
+
+ <section>
+   <h2>What's on your mind?</h2>
+
+   
 
   <!-- A form element that contains the following: -->
-
+  <form>
     <!-- An input element whose label and id are `username` -->
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" />
 
     <!-- An input element whose label and id are `title` -->
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" />
 
     <!-- A textarea element whose label and id are `content` -->
+    <label for="content">Content:</label>
+    <textarea id="content" name="content"></textarea>
+
+    <p id="error"></p>
+
+    <button id="submit" type="submit">Submit</button>
+
+  </form>
+</section>
+  </main>
+
 
     <!-- A p element whose id is `error` -->
 
